Add subscription controller
